[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/headerTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/themes/buttonTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/themes/settingsTextTheme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/OptionsMenu.gd" type="Script" id=4]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.156863, 0.192157, 1 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 617.0
margin_top = 323.0
margin_right = 918.0
margin_bottom = 540.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 301.0
margin_bottom = 100.0
theme = ExtResource( 1 )
text = "Settings"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 301.0
margin_bottom = 151.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 126.0
margin_bottom = 31.0
theme = ExtResource( 3 )
text = "Volume (dB)"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 146.0
margin_right = 301.0
margin_bottom = 31.0
size_flags_horizontal = 3
alignment = 1

[node name="VolumeSlider" type="HSlider" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 7.0
margin_right = 155.0
margin_bottom = 23.0
size_flags_horizontal = 3
min_value = -45.0
max_value = 0.0

[node name="BackButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 301.0
margin_bottom = 217.0
theme = ExtResource( 2 )
text = "Back"

[connection signal="value_changed" from="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
